--- a/parameters.ipynb
+++ b/parameters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,29 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "784\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "len() of a 0-d tensor",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [18], line 21\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[39m#get parameters \u001b[39;00m\n\u001b[0;32m     20\u001b[0m \u001b[39mfor\u001b[39;00m name, params \u001b[39min\u001b[39;00m model\u001b[39m.\u001b[39mnamed_parameters():\n\u001b[1;32m---> 21\u001b[0m   \u001b[39mprint\u001b[39m(\u001b[39mlen\u001b[39;49m(params[\u001b[39m3\u001b[39;49m]))\n\u001b[0;32m     22\u001b[0m   np\u001b[39m.\u001b[39msavetxt(name \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m.txt\u001b[39m\u001b[39m\"\u001b[39m, params\u001b[39m.\u001b[39mdetach()\u001b[39m.\u001b[39mnumpy(), fmt\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\emilh\\anaconda3\\envs\\dl\\lib\\site-packages\\torch\\_tensor.py:705\u001b[0m, in \u001b[0;36mTensor.__len__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    703\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(Tensor\u001b[39m.\u001b[39m\u001b[39m__len__\u001b[39m, (\u001b[39mself\u001b[39m,), \u001b[39mself\u001b[39m)\n\u001b[0;32m    704\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdim() \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m--> 705\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mlen() of a 0-d tensor\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    706\u001b[0m \u001b[39mif\u001b[39;00m torch\u001b[39m.\u001b[39m_C\u001b[39m.\u001b[39m_get_tracing_state():\n\u001b[0;32m    707\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\u001b[39m'\u001b[39m\u001b[39mUsing len to get tensor shape might cause the trace to be incorrect. \u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m    708\u001b[0m                   \u001b[39m'\u001b[39m\u001b[39mRecommended usage would be tensor.shape[0]. \u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m    709\u001b[0m                   \u001b[39m'\u001b[39m\u001b[39mPassing a tensor of different shape might lead to errors or silently give \u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m    710\u001b[0m                   \u001b[39m'\u001b[39m\u001b[39mincorrect results.\u001b[39m\u001b[39m'\u001b[39m, category\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mjit\u001b[39m.\u001b[39mTracerWarning, stacklevel\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: len() of a 0-d tensor"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Student(nn.Module):\n",
     "  def __init__(self, input_size, num_classes):\n",
@@ -70,9 +50,19 @@
     "\n",
     "\n",
     "#get parameters \n",
-    "for name, params in model.named_parameters()\n",
+    "for name, params in model.named_parameters():\n",
     "  np.savetxt(name + \".txt\", params.detach().numpy(), fmt=\"%s\")\n",
     "\n",
+    "\n",
+    "\n",
+    "file = open(\"fc2.weight.txt\")\n",
+    "output = open(\"fc2_weights.txt\", \"w\")\n",
+    "\n",
+    "for i in file:\n",
+    "    output.write(i.replace(\" \", \",\"))\n",
+    "\n",
+    "file.close()\n",
+    "output.close()\n",
     "\n"
    ]
   }
